workspace-sf/force-app/main/default/objects/ReaberturaSinistro__mdt/ReaberturaSinistro__mdt.object-meta.xml
<CustomObject>
    <label>Reabertura Sinistro SLA</label>
    <pluralLabel>ReaberturaSinistro</pluralLabel>
</CustomObject>