workspace-sf/force-app/main/default/objects/ReaberturaSinistro__mdt/fields/Marco__c.field-meta.xml
<CustomField>
    <fullName>Marco__c</fullName>
    <label>Marco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>