workspace-sf/force-app/main/default/objects/ReaberturaSinistro__mdt/fields/Tempo_minutos__c.field-meta.xml
<CustomField>
    <fullName>Tempo_minutos__c</fullName>
    <label>Tempo (minutos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>