workspace-sf/force-app/main/default/objects/ReaberturaSinistro__mdt/fields/TipoRegistro__c.field-meta.xml
<CustomField>
    <fullName>TipoRegistro__c</fullName>
    <label>Tipo de Registro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tempo Marco Sinistro</fullName>
                <default>true</default>
                <label>Tempo Marco Sinistro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>